packages/components/src/styles/dialog-init.scss
@use "@db-ux/core-foundations/build/styles/colors";
@use "@db-ux/core-foundations/build/styles/variables";

$backdrop-color-strong: color(
	from #{colors.$db-adaptive-on-bg-basic-emphasis-100-default} srgb r g b /
		#{variables.$db-opacity-lg}
);
$backdrop-color-weak: color(
	from #{colors.$db-adaptive-on-bg-basic-emphasis-100-default} srgb r g b /
		#{variables.$db-opacity-sm}
);

dialog {
	padding: 0;
	margin: 0;
	border: 0;
	z-index: 9996;
	color: inherit;

	&:not([data-position="absolute"]) {
		&[data-variant],
		&[data-backdrop] {
			position: fixed;
			inset: 0;
			z-index: 9995;
		}

		&[data-variant="inside"] {
			&:not([data-backdrop="none"]) {
				&::before {
					content: "";
					position: fixed;
					inset: 0;
				}
			}
		}
	}

	&:not([data-backdrop="none"]) {
		&::backdrop,
		&::before {
			background-color: $backdrop-color-strong;
		}

		&[data-backdrop="invisible"] {
			&::backdrop,
			&::before {
				background-color: transparent;
			}
		}

		&[data-backdrop="weak"] {
			&::backdrop,
			&::before {
				background-color: $backdrop-color-weak;
			}
		}
	}
}

